--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-fontawesome": "^1.7.1",
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.4.0",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
